# Physical-AI-Robotic-my-Book-code-base

./: .gitignore  GEMINI.md
.docusaurus/: client-manifest.json  client-modules.js
.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json
.docusaurus/docusaurus-plugin-debug/default/p/: docusaurus-debug-content-0d5.json
backend/: .gitignore  README.md  RETRIEVAL_PIPELINE_SUMMARY.md  RETRIEVAL_TESTING.md  main.py  pyproject.toml  relevance_tester.py  requirements.txt  retrieval_pipeline.py  retrieval_tester.py  test_suite.py
backend/docusaurus_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: intro.md
embedding_pipeline/: .env.example  README.md  cli.py  config.py  crawler.py  embedder.py  main.py  processor.py  rag_retriever.py  requirements.txt  storage.py  test_pipeline.py
history/prompts/general/: 001-initial-setup-and-environment-context.general.prompt.md
rag_agent/: README.md  main.py  pyproject.toml  requirements.txt  test_agent.py
src/components/ChatInterface/: ChatInterface.css  ChatInterface.tsx  IMPLEMENTATION_SUMMARY.md  VERIFICATION_REPORT.md  index.ts  test-integration.js
src/components/HomepageFeatures/: index.tsx  styles.module.css
src/pages/: index.module.css  index.tsx
src/theme/: Root.js
