[project]
name = "rag-agent-backend"
version = "0.1.0"
description = "RAG Agent Backend with OpenAIAgentSDK and FastAPI"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.3.5",
    "qdrant-client>=1.8.0",
    "cohere>=4.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"